issue #105 java.util.Base64 replaced by javax.xml.bind.DatatypeConverter